@@ -1,6 +1,6 @@
-package com.example.demo.service;
+package com.example.demo.exo1.service;
 
-import com.example.demo.model.Todo;
+import com.example.demo.exo1.model.Todo;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -8,11 +8,10 @@ import java.util.List;
 
 @Service
 public class TodoService {
-    private List<Todo> todos;
+    private List<Todo> todos = new ArrayList<>();
     private Long nextId = 1L;
 
     public TodoService() {
-        todos = new ArrayList<>();
         todos.add(new Todo(nextId++, "Faire les courses", "Acheter du pain, lait et fruits", false));
         todos.add(new Todo(nextId++, "Réviser Spring", "Étudier les concepts de base de Spring Boot", true));
         todos.add(new Todo(nextId++, "Exercice Java", "Terminer l'exercice sur les TODOs", false));
@@ -24,10 +23,7 @@ public class TodoService {
     }
 
     public Todo getFirstTodo() {
-        if (todos.isEmpty()) {
-            return null;
-        }
-        return todos.get(0);
+        return todos.isEmpty() ? null : todos.getFirst();
     }
 
     public Todo getTodoById(Long id) {
